deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin 
  namespace: default
  labels:
    app: jellyfin 
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: jellyfin 
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin 
        image: lscr.io/linuxserver/jellyfin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: jellyfin-config
          mountPath: /config
        - name: jellyfin-tvshows
          mountPath: /data/tvshows
        - name: jellyfin-movies
          mountPath: /data/movies
      volumes:
      - name: jellyfin-config
        persistentVolumeClaim:
            claimName: jellyfin-config
      - name: jellyfin-tvshows
        persistentVolumeClaim:
            claimName: jellyfin-tvshows
      - name: jellyfin-movies
        persistentVolumeClaim:
            claimName: jellyfin-movies
