ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: jellyfin.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin 
            port:
              number: 8096
